[package]
name = "vips-sys"
version = "0.1.3-beta.1"
authors = ["elbaro <elbaro@github>", "houseme <housemecn@gmail.com"]
edition = "2021"
description = "libvips bindings for Rust"
documentation = "https://houseme.github.io/vips-sys/vips_sys/"
repository = "https://github.com/houseme/vips-sys"
readme = "README.md"
keywords = ["vips", "image", "libvips"]
categories = ["multimedia::images", "external-ffi-bindings"]
license = "MIT"
links = "vips"

[features]
static = []
dynamic = []
helpers = []

[build-dependencies]
pkg-config = "0.3.32"
bindgen = "0.72.1"

[target.'cfg(target_env = "msvc")'.build-dependencies]
vcpkg = { version = "0.2.15" }

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
